--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Sortable List</title>
+  <title>Top 10 Richest People</title>
+  <script
+  src="https://kit.fontawesome.com/3da1a747b2.js"
+  crossorigin="anonymous"
+></script>
 </head>
 <body>
 
 
-
+  <h1>10 Richest People</h1>
+  <p>Drag and drop the items into their corresponding spots</p>
+  <ul class="draggable-list" id="draggable-list"></ul>
+  <button class="check-btn" id="check">
+    Check Order
+    <i class="fas fa-paper-plane"></i>
+  </button>
 
 
 
